--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "svelte": "^4.2.12",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "firebase": "^10.12.2"
   }
 }
