--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
-    "firebase": "^10.12.2"
+    "firebase": "^10.12.2",
+    "uuid": "^10.0.0"
   }
 }
