--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@tailwindcss/typography": "^0.5.13",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.12.2",
     "postcss": "^8.4.38",
@@ -18,7 +19,10 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
+    "dompurify": "^3.1.5",
     "firebase": "^10.12.2",
+    "marked": "^13.0.0",
+    "markedjs": "^0.0.1-security",
     "uuid": "^10.0.0"
   }
 }
