--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^10.12.2",
     "marked": "^13.0.0",
     "markedjs": "^0.0.1-security",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "vite-plugin-pwa": "^0.20.0"
   }
 }
